fix css link in html

--- a/navigation/template/navigation.html
+++ b/navigation/template/navigation.html
@@ -1,5 +1,5 @@
 <!-- CoffeeNet header -->
-<link rel="stylesheet" type="text/css" href="/webjars/@project.artifactId@/@project.version@/navigation.css"/>
+<link rel="stylesheet" type="text/css" href="/webjars/@project.artifactId@/@project.version@/css/navigation.css"/>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
