Fix logout button style

--- a/navigation/template/navigation.html
+++ b/navigation/template/navigation.html
@@ -27,8 +27,8 @@
                 </li>
             </ul>
 
-            <form class="navbar-form navbar-text navbar-right" action="/logout" method="post">
-                <button type="submit" id="logout-link">
+            <form class="navbar-form navbar-right" action="/logout" method="post">
+                <button class="btn btn-link" type="submit" id="logout-link">
                     <span class="glyphicon glyphicon-log-out"></span>
                     Logout
                 </button>
