--- a/navigation/template/navigation.html
+++ b/navigation/template/navigation.html
@@ -19,10 +19,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">CoffeeNet <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        {{#apps}}
-                        <li><a href="{{url}}">{{name}}</a></li>
-                        {{/apps}}
+                    <ul id="coffeenet-apps" class="dropdown-menu">
+                        <!-- render by javascript -->
                     </ul>
                 </li>
             </ul>
@@ -35,7 +33,9 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <li class="navbar-text hidden-xs">
-                    <span>{{username}}</span>
+                    <span id="coffeenet-username">
+                        <!-- render by javascript -->
+                    </span>
                 </li>
             </ul>
         </div>
