--- a/navigation/template/navigation.html
+++ b/navigation/template/navigation.html
@@ -18,7 +18,7 @@
             <ul class="nav navbar-nav navbar-left">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">CoffeeNet <span class="caret"></span></a>
+                       aria-expanded="false">Applications <span class="caret"></span></a>
                     <ul id="coffeenet-apps" class="dropdown-menu">
                         <!-- render by javascript -->
                     </ul>
