remove not needed versions in links

--- a/navigation/template/navigation.html
+++ b/navigation/template/navigation.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="/webjars/@project.artifactId@/@project.version@/css/navigation.css"/>
+<link rel="stylesheet" type="text/css" href="/webjars/@project.artifactId@/css/navigation.css"/>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
