--- a/navigation/template/navigation.html
+++ b/navigation/template/navigation.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a id="logo" href="https://synyx.coffee">Synyx Logo</a>
+            <a id="logo" href="https://synyx.coffee" title="CoffeeNet Frontpage">Synyx Logo</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
