logo should be inlined in css file

--- a/navigation/js/navbar.css
+++ b/navigation/js/navbar.css
@@ -14,7 +14,7 @@
     text-decoration: none;
     font-size: 20px;
     margin-right: 70px;
-    background: url(/webjars/@project.artifactId@/css/synyx-logo-nav.png) no-repeat center center;
+    background: url('./../images/synyx-logo-nav.png') no-repeat center center;
     background-size: 75px auto;
     overflow: hidden;
     text-indent: -9999px;
