--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -1,21 +1,72 @@
 
-.header {
-    min-height: 70px;
+:global *, :global *::before, :global *::after {
+    box-sizing: border-box;
 }
 
-.logo {
-    color: #1b2a05;
-    display: block;
-    float: left;
-    padding: 20px 0;
-    height: 50px;
-    width: 85px;
-    line-height: 40px;
-    text-decoration: none;
-    font-size: 20px;
-    margin-right: 70px;
-    background: url('./synyx-logo-nav.png') no-repeat center center;
-    background-size: 75px auto;
-    overflow: hidden;
-    text-indent: -9999px;
+:global html {
+    height: 100%;
+}
+:global body {
+    display: flex;
+    min-height: 100%;
+}
+:global #coffeenet-header {
+    min-height: 100%;
+    padding: 20px;
+    background-color: #ebebeb;
+    box-shadow: 0px 0px 0.2em #757575;
+}
+
+.personalisationContainer {
+    display: flex;
+    align-items: center;
+}
+
+.avatarCircleOuter,
+.avatarCircleInner {
+    border: 1px solid #C1C1C1;
+    border-radius: 100%;
+    background-color: white;
+}
+.avatarCircleOuter {
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+.avatarCircleInner {
+    width: calc(100% - 6px);
+    height: calc(100% - 6px);
+}
+.avatar {
+    background: url('./user_avatar.jpg') no-repeat;
+    background-size: 100% 100%;
+    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+}
+
+.username {
+    margin: 0 0 0 20px;
+    padding: 0;
+    font-size: 1.5em;
+}
+
+
+.navigationContainer {
+    margin-top: 2em;
+}
+
+.navSectionTitle {
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
+    color: #BEBEBE;
+    text-transform: uppercase;
+}
+
+.navSectionList {
+    margin-top: 10px;
 }
