--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -55,12 +55,8 @@
 }
 
 
-.navigationContainer {
-    margin-top: 2em;
-}
-
 .navSectionTitle {
-    margin: 0;
+    margin: 20px 0 0 0;
     padding: 0;
     font-size: 1em;
     color: #BEBEBE;
@@ -69,4 +65,18 @@
 
 .navSectionList {
     margin-top: 10px;
+}
+
+.buttonLogout {
+    border: none;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    color: #337ab7;
+    text-decoration: none;
+}
+.buttonLogout:focus, .buttonLogout:hover {
+    color: #23527c;
+    text-decoration: underline;
 }
