--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -13,8 +13,12 @@
 :global #coffeenet-header {
     min-height: 100%;
     padding: 20px;
-    background-color: #ebebeb;
     box-shadow: 0px 0px 0.2em #757575;
+    background-color: #ebebeb;
+    background-image: url('./synyx-logo.png');
+    background-attachment: fixed;
+    background-position: bottom left;
+    background-repeat: no-repeat;
 }
 
 .personalisationContainer {
