--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -10,7 +10,8 @@
     display: flex;
     min-height: 100%;
 }
-:global #coffeenet-header {
+
+.headerContainer {
     min-height: 100%;
     padding: 20px;
     box-shadow: 0px 0px 0.2em #757575;
@@ -19,13 +20,16 @@
     background-attachment: fixed;
     background-position: bottom left;
     background-repeat: no-repeat;
+    transition: margin cubic-bezier(0.47, 0, 0.75, 0.72) 450ms;
 }
-
-:global #nav-hamburger {
-    display: none;
+.headerContainer.hidden {
+    margin-left: -115px;
 }
 
 .hamburger {
+    position: absolute;
+    left: 20px;
+    top: 20px;
     display: block;
     cursor: pointer;
     height: 21px;
@@ -42,7 +46,6 @@
 .hamburger span {
     position: relative;
     transition-duration: 0;
-    margin-left: auto; /* align right */
 }
 .hamburger span::after, .hamburger span::before {
     display: block;
@@ -58,22 +61,23 @@
 }
 
 
-:global #nav-hamburger:checked ~ label span {
-    background-color: transparent;
-}
-:global #nav-hamburger:checked ~ label span::before, :global #nav-hamburger:checked ~ label span::after {
-    margin-top: 0px;
-    transition-delay: 0, 0.2s;
-}
-:global #nav-hamburger:checked ~ label span::before {
-    transform: rotate(45deg);
-}
-:global #nav-hamburger:checked ~ label span::after {
-    transform: rotate(-45deg);
-}
+/*:global #nav-hamburger:checked ~ label span {*/
+    /*background-color: transparent;*/
+/*}*/
+/*:global #nav-hamburger:checked ~ label span::before, :global #nav-hamburger:checked ~ label span::after {*/
+    /*margin-top: 0px;*/
+    /*transition-delay: 0, 0.2s;*/
+/*}*/
+/*:global #nav-hamburger:checked ~ label span::before {*/
+    /*transform: rotate(45deg);*/
+/*}*/
+/*:global #nav-hamburger:checked ~ label span::after {*/
+    /*transform: rotate(-45deg);*/
+/*}*/
 
 
 .personalisationContainer {
+    margin-top: 40px;
     display: flex;
     align-items: center;
 }
