--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -115,17 +115,22 @@
 }
 
 .buttonLogout {
+    margin-top: 20px;
     border: none;
-    background: transparent;
-    padding: 0;
-    margin: 0;
-    outline: none;
-    color: #337ab7;
-    text-decoration: none;
+    background-color: #AED581;
+    color: #33691E;
+    text-transform: uppercase;
+    width: 100%;
+    padding: 0.3em 0em;
+    transition: background-color ease 150ms;
 }
-.buttonLogout:focus, .buttonLogout:hover {
-    color: #23527c;
-    text-decoration: underline;
+.buttonLogout:focus, .buttonLogout:hover, .buttonLogout:active {
+    background-color: #8BC34A;
+    color: #1B5E20;
+}
+.buttonLogout:hover {
+    /* outline should exist on tab navigation but not on mouse click */
+    outline: none;
 }
 
 
