--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -96,6 +96,10 @@
     width: 100%;
     height: 100%;
 }
+.headerContainer.visible .avatarCircleOuter {
+    width: 80px;
+    height: 80px;
+}
 
 .username {
     margin: 10px 0 0 0;
@@ -193,8 +197,8 @@
         height: 33px;
     }
     .headerContainer:not(.visible) .avatarCircleOuter {
-        width: 60px;
-        height: 60px;
+        width: 80px;
+        height: 80px;
     }
     .headerContainer.visible .username {
         display: none;
