increased clickable hamburger area
* Add padding top to fit correct to the hamburger menu

--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -35,6 +35,7 @@
     cursor: pointer;
     height: 21px;
     margin-bottom: 20px;
+    padding-top: 9px;
 }
 .hamburger span,
 .hamburger span::after, .hamburger span::before {
