menu item as one liner and text-overflow ellipsis

--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -137,6 +137,9 @@
 .navSectionList li > a {
     text-decoration: none;
     flex-grow: 1;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .navSectionList li > a,
 .navSectionList li > a + span {
