--- a/navigation/Navbar/navbar.css
+++ b/navigation/Navbar/navbar.css
@@ -79,6 +79,7 @@
     padding: 2px;
 }
 .avatar img {
+    border: none;
     border-radius: 100%;
     width: 33px;
     height: 33px;
@@ -105,6 +106,10 @@
     margin: 10px 0 0 0;
     padding: 0;
     font-size: 1.5em;
+}
+.username a {
+    color: black;
+    text-decoration: none;
 }
 
 .username,
